index main styles add

--- a/index.html
+++ b/index.html
@@ -1,1 +1,56 @@
-<!-- 팀원이 수정함  -->
+<!DOCTYPE html>
+<html lang="ko">
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <title>온라인 탑골공원</title>
+    <link rel="stylesheet" href="./styles/styles.css" />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Do+Hyeon&family=Nanum+Myeongjo&display=swap"
+      rel="stylesheet"
+    />
+  </head>
+  <body>
+    <header class="site-header">
+      <img
+        src="./assets/images/cherryblossom.png"
+        class="cherry"
+        alt="벚꽃 장식"
+      />
+      <h1>탁골공원</h1>
+      <p class="subtitle">어서오세요, 탁골공원입니다!</p>
+    </header>
+
+    <nav class="menu">
+      <div>
+        <span>▶️</span>
+        <p>탑골기오실</p>
+      </div>
+      <div>
+        <span>📋</span>
+        <p>자유게시판</p>
+      </div>
+      <div>
+        <span>🎵</span>
+        <p>주크박스</p>
+      </div>
+      <div>
+        <span>✨</span>
+        <p>짤방 & 유머방</p>
+      </div>
+    </nav>
+
+    <main>
+      <section id="video"></section>
+      <section id="popular"></section>
+      <section id="jukebox"></section>
+      <section id="gag"></section>
+    </main>
+
+    <footer>
+      <p>© 2025 탁골공원. All rights reserved.</p>
+    </footer>
+
+    <script src="./scripts/main.js"></script>
+  </body>
+</html>
