--- a/index.html
+++ b/index.html
@@ -12,30 +12,26 @@
   </head>
   <body>
     <header class="site-header">
-      <img
-        src="./assets/images/cherryblossom.png"
-        class="cherry"
-        alt="벚꽃 장식"
-      />
-      <h1>탁골공원</h1>
+      <img src="./assets/images/image.png" class="cherry" alt="벚꽃 장식" />
+      <h1>온라인 탑골공원</h1>
       <p class="subtitle">어서오세요, 탁골공원입니다!</p>
     </header>
 
     <nav class="menu">
       <div>
-        <span>▶️</span>
-        <p>탑골기오실</p>
+        <span class="icon-large">📺</span>
+        <p>탑골 가요실</p>
       </div>
       <div>
-        <span>📋</span>
-        <p>자유게시판</p>
+        <span class="icon-large">📰</span>
+        <p>자유 게시판</p>
       </div>
       <div>
-        <span>🎵</span>
-        <p>주크박스</p>
+        <span class="icon-large">🎧</span>
+        <p>주크 박스</p>
       </div>
       <div>
-        <span>✨</span>
+        <span class="icon-large">😂</span>
         <p>짤방 & 유머방</p>
       </div>
     </nav>
