오늘의 운세 기능

--- a/index.html
+++ b/index.html
@@ -36,6 +36,13 @@
       </div>
     </nav>
 
+    <!-- 오늘의 운세 섹션 -->
+    <section id="fortune" class="fortune-section">
+      <h2>🌟 오늘의 탑골 운세</h2>
+      <button onclick="showFortune()">운세 뽑기</button>
+      <p id="fortuneText">오늘의 운세가 여기에 표시됩니다.</p>
+    </section>
+
     <main>
       <section id="video"></section>
       <section id="popular"></section>
