--- a/index.html
+++ b/index.html
@@ -36,11 +36,23 @@
       </div>
     </nav>
 
-    <!-- 오늘의 운세 섹션 -->
-    <section id="fortune" class="fortune-section">
-      <h2>🌟 오늘의 탑골 운세</h2>
-      <button onclick="showFortune()">운세 뽑기</button>
-      <p id="fortuneText">오늘의 운세가 여기에 표시됩니다.</p>
+    <!-- 운세와 퀴즈를 나란히 감싸는 섹션 -->
+    <section class="fortune-quiz-wrapper">
+      <!-- 운세 -->
+      <div class="fortune-box">
+        <h2>🌟 오늘의 탑골 운세</h2>
+        <button onclick="showFortune()">운세 뽑기</button>
+        <p id="fortuneText">오늘의 운세가 여기에 표시됩니다.</p>
+      </div>
+
+      <!-- 퀴즈 -->
+      <div class="quiz-box">
+        <h2>🧠 오늘의 낱말 퀴즈</h2>
+        <p id="quizQuestion">문제가 여기에 나옵니다.</p>
+        <input type="text" id="quizAnswer" placeholder="정답을 입력하세요" />
+        <button onclick="checkQuizAnswer()">정답 확인</button>
+        <p id="quizResult"></p>
+      </div>
     </section>
 
     <main>
