--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
     <header class="site-header">
       <img src="./assets/images/image.png" class="cherry" alt="벚꽃 장식" />
       <h1>온라인 탑골공원</h1>
-      <p class="subtitle">어서오세요, 탁골공원입니다!</p>
+      <p class="subtitle">어서오세요, 탑골공원입니다!</p>
     </header>
 
     <nav class="menu">
@@ -44,7 +44,7 @@
     </main>
 
     <footer>
-      <p>© 2025 탁골공원. All rights reserved.</p>
+      <p>© 2025 탑골공원. All rights reserved.</p>
     </footer>
 
     <script src="./scripts/main.js"></script>
